--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <!--
 
     Maven package-info.java Plugin - Autogenerates package-info.java files with arbitrary headers
-    Copyright © 2012 - 2017 shadowhunt (dev@shadowhunt.de)
+    Copyright © ${project.inceptionYear} shadowhunt (dev@shadowhunt.de)
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -15,7 +15,7 @@
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with this program. If not, see <http://www.gnu.org/licenses />.
+    along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -87,7 +87,7 @@
 
     <properties>
         <jacoco.itReportPath>${project.basedir}/target/jacoco-it.exec</jacoco.itReportPath>
-        <jacoco.reportPath>${project.basedir}/target/jacoco-ut.exec</jacoco.reportPath>
+        <jacoco.utReportPath>${project.basedir}/target/jacoco-ut.exec</jacoco.utReportPath>
 
         <maven.api.version>3.0</maven.api.version>
 
@@ -155,7 +155,7 @@
             <plugin>
                 <groupId>com.github.ekryd.sortpom</groupId>
                 <artifactId>sortpom-maven-plugin</artifactId>
-                <version>2.5.0</version>
+                <version>2.8.0</version>
                 <configuration>
                     <createBackupFile>false</createBackupFile>
                     <keepBlankLines>true</keepBlankLines>
@@ -163,6 +163,7 @@
                     <sortDependencies>groupId,artifactId</sortDependencies>
                     <sortPlugins>groupId,artifactId</sortPlugins>
                     <sortProperties>true</sortProperties>
+                    <sortModules>true</sortModules>
                 </configuration>
             </plugin>
             <plugin>
@@ -180,13 +181,14 @@
                 <configuration>
                     <excludes>
                         <exclude>**/.*</exclude>
+                        <exclude>Jenkinsfile</exclude>
                         <exclude>LICENSE</exclude>
                         <exclude>README</exclude>
                     </excludes>
                     <header>com/mycila/maven/plugin/license/templates/GPL-3.txt</header>
                     <properties>
                         <owner>${project.organization.name}</owner>
-                        <project.inceptionYear>${project.inceptionYear} - 2017</project.inceptionYear>
+                        <project.inceptionYear>${build.copyright.year}</project.inceptionYear>
                         <email>dev@shadowhunt.de</email>
                     </properties>
                 </configuration>
@@ -199,22 +201,24 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.1.0</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.7.0</version>
                 <configuration>
+                    <compilerArgument>-Xlint:all</compilerArgument>
+                    <failOnWarning>true</failOnWarning>
                     <proc>none</proc>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>analyze</id>
@@ -235,8 +239,28 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <executions>
+                    <execution>
+                        <id>enforce-maven</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>3.0.4</version>
+                                </requireMavenVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>2.21.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -271,7 +295,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-help-plugin</artifactId>
-                <version>2.2</version>
+                <version>3.0.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -284,7 +308,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
+                <version>3.1.0</version>
                 <configuration>
                     <archive>
                         <index>true</index>
@@ -292,7 +316,8 @@
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                         </manifest>
                         <manifestEntries>
-                            <Implementation-Build>${buildNumber}</Implementation-Build>
+                            <Built-By>dev@shadowhunt.de</Built-By>
+                            <Implementation-Build>${build.version.full}</Implementation-Build>
                         </manifestEntries>
                     </archive>
                     <skipIfEmpty>true</skipIfEmpty>
@@ -301,7 +326,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <id>attach-javadoc</id>
@@ -312,13 +337,15 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <!-- helpmojo generates javadoc with self-closing tags -->
+                    <doclint>none</doclint>
                     <quiet>true</quiet>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.5</version>
+                <version>3.5.1</version>
                 <executions>
                     <execution>
                         <id>mojo-descriptor</id>
@@ -331,6 +358,9 @@
                         <goals>
                             <goal>helpmojo</goal>
                         </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
+                        </configuration>
                     </execution>
                 </executions>
                 <configuration>
@@ -359,56 +389,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.6</version>
+                <version>3.7</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.apache.maven.wagon</groupId>
                         <artifactId>wagon-ssh</artifactId>
-                        <version>2.5</version>
+                        <version>3.0.0</version>
                     </dependency>
                 </dependencies>
-                <configuration>
-                    <reportPlugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-plugin-plugin</artifactId>
-                            <version>3.5</version>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-project-info-reports-plugin</artifactId>
-                            <version>2.9</version>
-                            <reportSets>
-                                <reportSet>
-                                    <reports>
-                                        <report>summary</report>
-                                        <report>scm</report>
-                                        <report>dependency-info</report>
-                                        <report>dependencies</report>
-                                        <report>plugins</report>
-                                        <report>license</report>
-
-                                        <report>dependency-convergence</report>
-                                        <report>dependency-management</report>
-                                        <report>modules</report>
-                                    </reports>
-                                </reportSet>
-                            </reportSets>
-                            <configuration>
-                                <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
-                                <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-surefire-report-plugin</artifactId>
-                            <version>2.19.1</version>
-                            <configuration>
-                                <linkXRef>false</linkXRef>
-                            </configuration>
-                        </plugin>
-                    </reportPlugins>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -427,7 +415,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>2.21.0</version>
                 <configuration>
                     <printSummary>false</printSummary>
                     <argLine>${jacoco.agent.argLineUT}</argLine>
@@ -436,7 +424,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>animal-sniffer-maven-plugin</artifactId>
-                <version>1.15</version>
+                <version>1.16</version>
                 <executions>
                     <execution>
                         <phase>verify</phase>
@@ -448,33 +436,39 @@
                 <configuration>
                     <signature>
                         <groupId>org.codehaus.mojo.signature</groupId>
-                        <artifactId>java16</artifactId>
+                        <artifactId>java18</artifactId>
                         <version>1.0</version>
                     </signature>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
-                <artifactId>buildnumber-maven-plugin</artifactId>
-                <version>1.4</version>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>3.0.5</version>
                 <executions>
                     <execution>
-                        <phase>validate</phase>
+                        <id>verify</id>
+                        <phase>verify</phase>
                         <goals>
-                            <goal>create</goal>
+                            <goal>check</goal>
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <effort>Max</effort>
+                    <xmlOutput>true</xmlOutput>
+                    <excludeFilterFile>assets/dev/findbugs-exclude.xml</excludeFilterFile>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.3</version>
+                <version>2.5</version>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.9</version>
+                <version>0.8.1</version>
                 <executions>
                     <execution>
                         <id>ut</id>
@@ -484,7 +478,7 @@
                         </goals>
                         <configuration>
                             <propertyName>jacoco.agent.argLineUT</propertyName>
-                            <destFile>${jacoco.reportPath}</destFile>
+                            <destFile>${jacoco.utReportPath}</destFile>
                         </configuration>
                     </execution>
                     <execution>
@@ -498,7 +492,32 @@
                             <destFile>${jacoco.itReportPath}</destFile>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>merge</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>merge</goal>
+                        </goals>
+                        <configuration>
+                            <fileSets>
+                                <fileSet>
+                                    <directory>${project.build.directory}</directory>
+                                    <includes>
+                                        <include>jacoco-*.exec</include>
+                                    </includes>
+                                </fileSet>
+                            </fileSets>
+                        </configuration>
+                    </execution>
                 </executions>
+                <configuration>
+                    <includes>
+                        <include>de/shadowhunt/maven/plugins/packageinfo/**</include>
+                    </includes>
+                    <excludes>
+                        <exclude>de/shadowhunt/maven/plugins/packageinfo/HelpMojo.class</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
         <!-- }}}1 -->
